main.css
/* Bootstrap overloads */

:root {
  --red: #ee1111;
}

.header{
  height:9vh;
  width:100%;
  background-color:white;
}

.logo{
  height:100%;
  width:auto;
}

.logo-container{
  width:90%;
  height:100%;
  max-width:2000px;
  margin:auto;
}

.header-link{
  margin-top:1.5vh;
  margin-right:20px;
  float:right;
  font-size:1.2vmin;
  color:red;
}

.test{
  float:right;
  height:100%;
  width:20%;
  position:fixed;
  right:0;
}

nav.navbar {
  margin-bottom: 0 !important;
  border-radius: 0 !important;
  height: 3vh;
  z-index:5;
  width:100%;
}

.nav{
  width:100%;
  float:none;
  text-align: center;
}

.nav > li{
  width: 13vw;
  min-width: 150px;
  text-align: center;
  display:inline-block;
  float:none;
}

.container-fluid {
  width:90%;
  margin:auto;
  font-family: "Graduate", cursive !important;
}

.navbar.affix{
  top:0;
}
.red-bg.affix{
  top:3vh;
  z-index:4;
}
.affix {
  position:fixed;
}

.navbar-header{
  height:100%;
}

li{
  font-size: 1.5vmin;
  max-font-size: 4vw;
}

.separator {
  display: block;
  width: 100%;
  height: .5vh;
}

.dark-bg {
    background: url("./dark_exa.png");
    background-size: cover;
}

.light-bg {
  background-color: #eee;
}

.gray-bg {
  background-color: #c9c9c9;
}

.red-bg {
  background-color: #ee1111;
}

.page {
    min-height: 100vh !important;
    overflow: hidden;
}

.centered-90 {
  width: 90%;
  max-width:2000px;
  margin: 0 auto;

}

.cover-slider {
  margin-top:-3px;
  border-width: 3px;
  border-style: solid;
  -webkit-border-image: -webkit-gradient(linear, 0 0, 0 100%, from(var(--red)), to(rgba(248, 16, 16, 0))) 1 100%;
  -webkit-border-image: -webkit-linear-gradient(var(--red), rgba(248, 16, 16, 0)) 1 100%;
  -moz-border-image: -moz-linear-gradient(var(--red), rgba(248, 16, 16, 0)) 1 100%;
  -o-border-image: -o-linear-gradient(var(--red), rgba(248, 16, 16, 0)) 1 100%;
  border-image: linear-gradient(to bottom, var(--red), rgba(248, 16, 16, 0)) 1 100%;
}

.cover-slider div {
  background-repeat: no-repeat !important;
  background-attachment: fixed !important;
  background-position: center !important;
  height: 30vw;
  min-height:25vh;
  width: 100%;
}

.cover-slider .img-1 {
  background: url("http://placehold.it/2000x1000");
}

.cover-slider .img-2 {
  background: url("http://placehold.it/2001x1000");
}


.cover-slider .img-3 {
  background: url("http://placehold.it/2002x1000");
}


.cover-slider .img-4 {
  background: url("http://placehold.it/2003x1000");
}


.cover-slider .img-5 {
  background: url("http://placehold.it/2004x1000");
}


.cover-slider .img-6 {
  background: url("http://placehold.it/2005x1000");
}

.padded-cols [class*="col-"] {
    background-clip: padding-box;
    border: 10px solid transparent;
}

.place-1140x400 {
  background-attachment: fixed !important;
  background-position: center !important;
  height: 400px;
  background: url("http://placehold.it/1140x400");
  display: block !important;
}

.place-500x300 {
  background-position: center !important;
  height: 300px;
  background: url("http://placehold.it/500x300");
  display: block !important;
}

.place-300x300 {
  background-position: center !important;
  height: 300px;
  background: url("http://placehold.it/300x300");
  display: block !important;
}

